--- a/java-event-driven-tests/pom.xml
+++ b/java-event-driven-tests/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+]<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
@@ -20,20 +20,21 @@
     <maven.compiler.target>21</maven.compiler.target>
 
     <!-- Dependency versions -->
-    <spring-boot.version>3.5.3</spring-boot.version>
+    <spring-boot.version>3.3.5</spring-boot.version>
     <spring-kafka.version>3.3.0</spring-kafka.version>
-    <testcontainers.version>1.21.2</testcontainers.version>
-    <testng.version>7.11.0</testng.version>
-    <jackson.version>2.19.1</jackson.version>
-    <jedis.version>6.0.0</jedis.version>
-    <awaitility.version>4.3.0</awaitility.version>
-    <slf4j.version>2.0.17</slf4j.version>
+    <testcontainers.version>1.21.0</testcontainers.version>
+    <testng.version>7.10.2</testng.version>
+    <jackson.version>2.18.2</jackson.version>
+    <jedis.version>5.2.0</jedis.version>
+    <awaitility.version>4.2.2</awaitility.version>
+    <slf4j.version>2.0.16</slf4j.version>
+    <logback.version>1.5.12</logback.version>
 
     <!-- Plugin versions -->
     <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
-    <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
-    <spring-boot-maven-plugin.version>3.5.3</spring-boot-maven-plugin.version>
-    <jacoco-maven-plugin.version>0.8.13</jacoco-maven-plugin.version>
+    <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
+    <spring-boot-maven-plugin.version>3.3.5</spring-boot-maven-plugin.version>
+    <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
   </properties>
 
   <dependencies>
@@ -70,6 +71,13 @@
       <version>${jedis.version}</version>
     </dependency>
 
+    <!-- Connection Pool for Redis -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-pool2</artifactId>
+      <version>2.12.0</version>
+    </dependency>
+
     <!-- Jackson for JSON processing -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
@@ -87,6 +95,19 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
       <version>${jackson.version}</version>
+    </dependency>
+
+    <!-- Logging -->
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>${logback.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.version}</version>
     </dependency>
 
     <!-- Test Dependencies -->
@@ -141,13 +162,47 @@
       <scope>test</scope>
     </dependency>
 
-    <!-- Logging -->
+    <!-- Optional: Additional Testing Libraries -->
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-      <version>${slf4j.version}</version>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.26.3</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>5.14.2</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- Optional: Resilience4j - Uncomment if you want to use it -->
+    <!--
+    <dependency>
+      <groupId>io.github.resilience4j</groupId>
+      <artifactId>resilience4j-spring-boot3</artifactId>
+      <version>2.2.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.github.resilience4j</groupId>
+      <artifactId>resilience4j-circuitbreaker</artifactId>
+      <version>2.2.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.github.resilience4j</groupId>
+      <artifactId>resilience4j-retry</artifactId>
+      <version>2.2.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-aop</artifactId>
+      <version>${spring-boot.version}</version>
+    </dependency>
+    -->
   </dependencies>
 
   <build>
@@ -161,6 +216,7 @@
           <source>${java.version}</source>
           <target>${java.version}</target>
           <encoding>${project.build.sourceEncoding}</encoding>
+          <parameters>true</parameters>
         </configuration>
       </plugin>
 
@@ -254,15 +310,48 @@
     </profile>
 
     <profile>
-      <id>skip-security-check</id>
-      <activation>
-        <property>
-          <name>skipSecurity</name>
-        </property>
-      </activation>
+      <id>skip-tests</id>
       <properties>
-        <dependency-check.skip>true</dependency-check.skip>
+        <skipTests>true</skipTests>
       </properties>
     </profile>
+
+    <profile>
+      <id>unit-tests</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <excludedGroups>integration</excludedGroups>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
+
+  <!-- Repository Configuration (optional, usually not needed) -->
+  <repositories>
+    <repository>
+      <id>spring-milestones</id>
+      <name>Spring Milestones</name>
+      <url>https://repo.spring.io/milestone</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
+  <pluginRepositories>
+    <pluginRepository>
+      <id>spring-milestones</id>
+      <name>Spring Milestones</name>
+      <url>https://repo.spring.io/milestone</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </pluginRepository>
+  </pluginRepositories>
 </project>
